<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".validUserIDAction">

    <TextView
        android:id="@+id/CAAUserIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/userID_text"
        app:layout_constraintEnd_toStartOf="@+id/VUUserIDInput"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/VUUserIDInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/CAAUserIdText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/CAAUserIdText" />

    <EditText
        android:id="@+id/VUNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/VUUserIDText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/VUUserIDText" />

    <TextView
        android:id="@+id/VUUserIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/name_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/VUNameInput"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/VUCheckUsernameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:onClick="checkUserID"
        android:text="@string/Check_userID_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VUUserIDInput" />

    <Button
        android:id="@+id/VUCreateAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:onClick="createAccount"
        android:text="@string/create_account_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/VUCurrentIDText"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/current_UserID_text"
        app:layout_constraintBottom_toTopOf="@+id/VUUserIDText"
        app:layout_constraintEnd_toStartOf="@+id/VUCurrentID"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CAAUserIdText"
        app:layout_constraintVertical_bias="0.741" />

    <TextView
        android:id="@+id/VUCurrentID"
        android:layout_width="183dp"
        android:layout_height="14dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/VUNameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/VUCurrentIDText"
        app:layout_constraintTop_toBottomOf="@+id/VUCheckUsernameButton"
        app:layout_constraintVertical_bias="0.46" />
</androidx.constraintlayout.widget.ConstraintLayout>